--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script src="body.js"></script>
     <script src="bodyManager.js"></script>
     <script src="flyingBugs.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketchVid.js"></script>
   </body>
 </html>
