--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
-     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
@@ -11,9 +12,10 @@
     <main>
     </main>
     <script src="bodyBug.js"></script>
+    <script src="breathBug.js"></script>
     <script src="body.js"></script>
     <script src="bodyManager.js"></script>
     <script src="flyingBugs.js"></script>
-    <script src="sketchVid.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
